# SMS--Scholorship-Managemnt-System

./: .gitignore  CMakeLists.txt  README.md  ScholarshipSystem.pro  Scholarship_Management_System_Presentation.docx  main.cpp
data/: applications.txt  scholarships.txt  students.txt
docs/: Scholarship_Management_System_Presentation.docx
models/: Application.cpp  Application.h  Scholarship.cpp  Scholarship.h  Student.cpp  Student.h
services/: EligibilityService.cpp  EligibilityService.h  FileManager.cpp  FileManager.h
ui/: AdminDashboard.cpp  AdminDashboard.h  LoginWindow.cpp  LoginWindow.h  StudentDashboard.cpp  StudentDashboard.h  StudentRegistrationWindow.cpp  StudentRegistrationWindow.h
